--- a/src/main/webapp/WEB-INF/views/thymeleaf/publicacionesUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/publicacionesUsuario.html
@@ -2,91 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Comunidad</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .body-comunidad {
-            background-color: #fafafa; /* Color de fondo similar al de Instagram */
-            font-family: Arial, sans-serif; /* Fuente similar a la de Instagram */
-        }
+    <title>Publicaciones Usuario</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 
-        .center-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh; /* Ajustado para centrar contenido verticalmente */
-            background-color: #fafafa; /* Ajustado para fondo similar */
-        }
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-        .card {
-            margin-bottom: 30px; /* Espacio entre las tarjetas de publicación */
-            border: none; /* Sin borde en las tarjetas */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
-            background-color: #ffffff; /* Fondo blanco para las tarjetas */
-            border-radius: 8px; /* Bordes redondeados */
-        }
+    <!--google-fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
-        .card img {
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
-            max-width: 100%; /* Imagen ajustada al ancho de la tarjeta */
-            object-fit: cover; /* Para cubrir completamente el espacio */
-            height: 400px; /* Altura fija para todas las imágenes */
-        }
 
-        .card-body {
-            padding: 20px; /* Espacio interno del cuerpo de la tarjeta */
-        }
-
-        .card-title {
-            font-size: 18px; /* Tamaño del título */
-            font-weight: bold; /* Negrita */
-            margin-bottom: 10px; /* Espacio después del título */
-        }
-
-        .card-text {
-            font-size: 16px; /* Tamaño del texto */
-            color: #333; /* Color del texto más oscuro */
-        }
-
-        .btn-subir {
-            position: fixed; /* Botón fijo en la esquina inferior derecha */
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000; /* Asegura que esté por encima de otros elementos */
-        }
-    </style>
 </head>
-<body class="body-comunidad">
-    <div class="container-fluid mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="text-center">
-                    <h1 class="mb-4">Publicaciones de <span th:text="${nombre}"></span></h1>
-                </div>
+<body>
 
-                <!-- Publicaciones -->
-                <div class="row">
-                            <div th:each="publicacion : ${publicacionesUsuario}" class="col-md-12">
-                            <div class="card">
-                            <img th:src="@{'/img/publicaciones/' + ${publicacion.rutaImagen}}" class="card-img-top" alt="imagen_publicacion">
-                            <div class="card-body">
-                               <a th:href="@{/perfilComunidad/{id}(id=${publicacion.usuario.id})}"><h5 class="card-title" th:text="${publicacion.usuario.nombre}"></h5></a>
-                               <p class="card-text" th:text="${publicacion.texto}"></p>
-                               <p class="card-text"></p>
-                            </div>
-                        </div>
+    <!--header/nav-->
+    <div th:replace="navbar :: navbar"></div>
+
+    <div class="container my-5" style="min-height: 75vh;">
+        <h2 class="text-center fw-bold mb-3">Publicaciones de <span th:text="${nombre}"></span></h2>
+        <div class="card mb-5 mx-auto" th:each="publicacion : ${publicacionesUsuario}" style="max-width: 720px;">
+            <div class="row g-0">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                    <img class="img-fluid rounded-start" th:src="@{'/img/publicaciones/' + ${publicacion.rutaImagen}}" alt="imagen-publicacion">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <a th:href="@{/perfilComunidad/{id}(id=${publicacion.usuario.id})}"><h5 class="card-title fw-bold" th:text="${publicacion.usuario.nombre}"></h5></a>
+                        <p class="card-text" th:text="${publicacion.texto}"></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Bootstrap JS y dependencias -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!--footer-->
+    <div th:replace="footer :: footer"></div>
+
 </body>
 </html>
 
