--- a/src/main/webapp/WEB-INF/views/thymeleaf/subirPublicacion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/subirPublicacion.html
@@ -1,30 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Subir Publicación</title>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!--google-fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="mb-4">Subir Nueva Publicación</h1>
-        <form th:action="@{/guardarPublicacion}" method="post" enctype="multipart/form-data" th:object="${publicacion}">
-            <div class="form-group">
-                <label for="texto">Texto</label>
-                <input type="text" class="form-control" id="texto" name="texto" required>
+
+    <!--header/nav-->
+    <div th:replace="navbar :: navbar"></div>
+
+    <div class="container my-5" style="min-height: 60vh;">
+
+        <h2 class="text-center fw-bold mb-4">Nueva Publicacion</h2>
+        
+        <div class="row d-flex flex-column justify-content-center align-items-center">
+            <div class="col-md-6 border border-2 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+                <form class="p-5" th:action="@{/guardarPublicacion}" method="POST" enctype="multipart/form-data" th:object="${publicacion}">
+                    <div class="form-floating mb-3">
+                        <input class="form-control" type="text" name="texto" id="texto" placeholder="Ingresar Texto" required>
+                        <label for="texto">Ingresar Texto</label>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label fw-bold" for="foto">Cargar Imagen</label>
+                        <input class="form-control form-contrl-sm" type="file" name="imagen" id="imagen">
+                    </div>   
+                    <div class="row mb-3">
+                        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
+                            <div class="d-flex flex-column justify-content-center align-items-center">
+                                <input class="btn btn-success" type="submit" name="subir" id="subir" value="Subir Publicacion">
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center">
+                            <div class="d-flex flex-column justify-content-center align-items-center">
+                                <a class="btn btn-warning" th:href="@{/comunidad}">Cancelar</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--errores-->
+                    <div class="d-flex flex-column justify-content-center">
+                        <div class="alert alert-danger alert-dismissible fade show" th:if="${error != null}">
+                            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                            <strong>Error: </strong><span th:text="${error}"></span>
+                        </div>
+                    </div>
+
+                </form>
             </div>
-            <div class="form-group">
-                <label for="imagen">Imagen</label>
-                <input type="file" class="form-control-file" id="imagen" name="imagen" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Subir Publicación</button>
-        </form>
+        </div>
+
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!--footer-->
+    <div th:replace="footer :: footer"></div>
+
 </body>
 </html>
