--- a/src/main/webapp/WEB-INF/views/thymeleaf/error404.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/error404.html
@@ -2,11 +2,49 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Página no encontrada :/</title>
-    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <style>
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            }
+            50% {
+                transform: scale(1.1);
+                text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+            }
+            100% {
+                transform: scale(1);
+                text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            }
+        }
+
+        .animated-error {
+            font-size: 4rem;
+            color: #FF0000;
+            animation: pulse 1s infinite;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+    </style>
 </head>
 <body>
-<h1>Error 404: Página no encontrada</h1>
-<p>Lo sentimos, la página que estás buscando no existe.</p>
-<a th:href="@{/home}">Volver a la página de inicio</a>
+
+<div class="container text-center" style="min-height: 100vh;">
+    <div class="animated-error">ERROR</div>
+    <div style="width: 100%; max-width: 500px; margin: auto;">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-triangle">
+            <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3H20.47a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path>
+            <line x1="12" y1="9" x2="12" y2="13"></line>
+            <line x1="12" y1="17" x2="12.01" y2="17"></line>
+        </svg>
+    </div>
+    <h1>Error 404: Página no encontrada</h1>
+    <p>Lo sentimos, la página que estás buscando no existe.</p>
+    <a th:href="@{/home}" class="btn btn-primary">Volver a la página de inicio</a>
+</div>
+
+<div th:replace="footer :: footer"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
