--- a/src/main/webapp/WEB-INF/views/thymeleaf/descripcionRecetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/descripcionRecetas.html
@@ -25,13 +25,25 @@
         <div class="col-md-12">
             <div class="list-group flex-row">
                 <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
-                <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
+                <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
                 <a th:href="@{/recetas}" class="list-group-item list-group-item-action activo">RECETAS</a>
                 <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
             </div>
         </div>
     </div>
 </div>
+
+<div style="margin-left: 20px; padding: 10px;">
+    <p>
+        <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
+        <span><a th:href="@{/recetas}" style="color: green;">Recetas</a></span> >
+        <span th:text="${receta.nombre}"></span>
+    </p>
+</div>
+
 <div class="row py-5">
     <div class="col-md-8" style="padding-left: 100px;">
         <div class="row">
