--- a/src/main/webapp/WEB-INF/views/thymeleaf/actividadesFisicas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/actividadesFisicas.html
@@ -22,9 +22,18 @@
                 <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action">ALIMENTOS</a>
                 <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
                 <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action activo">EN FORMA</a>
+                <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                <a th:href="@{/comunidad}" class="list-group-item list-group-item-action">COMUNIDAD</a>
             </div>
         </div>
     </div>
+</div>
+
+<div style="margin-left: 20px; padding: 10px;">
+    <p>
+        <span><a th:href="@{/home}" style="color: green;">Home</a></span> > Ejercicios
+    </p>
 </div>
 
 <div th:if="${mensajeEjercicioAgregado}" class="alert alert-success" role="alert">
