--- a/src/main/webapp/WEB-INF/views/thymeleaf/publicacionesUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/publicacionesUsuario.html
@@ -23,6 +23,29 @@
     <!--header/nav-->
     <div th:replace="navbar :: navbar"></div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="list-group flex-row">
+                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
+                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
+                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
+                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
+                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
+                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action activo">COMUNIDAD</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div style="margin-left: 20px; padding: 10px;">
+        <p>
+            <span><a th:href="@{/home}" style="color: green;">Home</a></span> >
+            <span><a th:href="@{/comunidad}" style="color: green;">Comunidad</a></span> > Publicaciones de <span th:text="${nombre}"></span>
+        </p>
+    </div>
+
     <div class="container my-5" style="min-height: 75vh;">
         <h2 class="text-center fw-bold mb-3">Publicaciones de <span th:text="${nombre}"></span></h2>
         <div class="card mb-5 mx-auto" th:each="publicacion : ${publicacionesUsuario}" style="max-width: 720px;">
