--- a/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Comunidad</title>
@@ -16,61 +16,72 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
+    <!--custom styles-->
+    <style>
+        .post-card {
+            max-width: 500px;
+            margin: 0 auto;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        .post-image {
+            width: 100%;
+            height: auto;
+        }
+        .post-content {
+            padding: 15px;
+        }
+        .post-header {
+            display: flex;
+            align-items: center;
+            padding: 15px;
+            border-bottom: 1px solid #ddd;
+        }
+        .post-header img {
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+        .post-actions {
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
 
     <!--header/nav-->
     <div th:replace="navbar :: navbar"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="list-group flex-row">
-                    <a th:href="@{/home}" class="list-group-item list-group-item-action ">MI FATLOSS</a>
-                    <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
-                    <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
-                    <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
-                    <a th:href="@{/estadisticasUsuario}" class="list-group-item list-group-item-action">ESTADISTICAS</a>
-                    <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">CALENDARIO</a>
-                    <a th:href="@{/comunidad}" class="list-group-item list-group-item-action activo">COMUNIDAD</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div style="margin-left: 20px; padding: 10px;">
-        <p>
-            <span><a th:href="@{/home}" style="color: green;">Home</a></span> > Comunidad
-        </p>
-    </div>
     <div class="container my-5" style="min-height: 60vh;">
-        
+
         <h2 class="text-center fw-bold mb-3">Publicaciones de la Comunidad</h2>
 
-        <div class="card mb-3 mx-auto" th:each="publicacion : ${publicaciones}">
-            <div class="row g-0">
-                <div class="col-md-4 d-flex justify-content-center align-items-center">
-                    <img class="img-fluid rounded-start" th:src="@{'/img/publicaciones/' + ${publicacion.rutaImagen}}" alt="imagen-publicacion">
+        <div th:each="publicacion : ${publicaciones}" class="post-card mb-4">
+            <div class="post-header">
+                 <img  th:src="@{'/img/' + ${publicacion.usuario.imagen}}" alt="avatar-perfil" width="50" height="50">
+                <div>
+                    <a th:href="@{/perfilComunidad/{id}(id=${publicacion.usuario.id})}">
+                        <h5 class="m-0 fw-bold" th:text="${publicacion.usuario.nombre}"></h5>
+                    </a>
+                    <small class="text-muted" th:text="${publicacion.fechaFormateada}"></small>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <a th:href="@{/perfilComunidad/{id}(id=${publicacion.usuario.id})}"><h5 class="card-title fw-bold" th:text="${publicacion.usuario.nombre}"></h5></a>
-                        <p class="card-text" th:text="${publicacion.texto}"></p>
-                     <p class="card-text">
-                       <small class="text-muted" th:text="${publicacion.fechaFormateada}"></small>
-                       </p>
-                        <span th:if="${likes[publicacion.id]}">
-                            <form th:action="@{/quitarMeGusta}" method="post">
-                                <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
-                                <button type="submit" class="btn btn-warning" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Quitar Me gusta</button>
-                            </form>
-                        </span>
-                        <span th:unless="${likes[publicacion.id]}">
-                            <form th:action="@{/darMeGusta}" method="post">
-                                <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
-                                <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Dar Me gusta</button>
-                            </form>
-                        </span>
-                    </div>
+            </div>
+            <img class="post-image" th:src="@{'/img/publicaciones/' + ${publicacion.rutaImagen}}" alt="imagen-publicacion">
+            <div class="post-content">
+                <p th:text="${publicacion.texto}"></p>
+                <div class="post-actions">
+                    <span th:if="${likes[publicacion.id]}">
+                        <form th:action="@{/quitarMeGusta}" method="post">
+                            <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
+                            <button type="submit" class="btn btn-warning" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Quitar Me gusta</button>
+                        </form>
+                    </span>
+                    <span th:unless="${likes[publicacion.id]}">
+                        <form th:action="@{/darMeGusta}" method="post">
+                            <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
+                            <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Dar Me gusta</button>
+                        </form>
+                    </span>
                 </div>
             </div>
         </div>
@@ -78,7 +89,7 @@
         <div class="d-flex justify-content-end">
             <a class="btn btn-dark" th:href="@{/subirPublicacion}">Subir Publicacion</a>
         </div>
-    
+
     </div>
 
     <!--footer-->
