--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -45,7 +45,7 @@
             </div>
          <div class="card mb-3">
                         <a th:href="@{/comunidad}">
-                            <img th:src="@{/img/menuReceta.jpg}" alt="Receta">
+                            <img th:src="@{/img/menuComunidad.jpg}" alt="Receta">
                             <div class="card-text">Comunidad</div>
                         </a>
                     </div>
